# nrv

./: .gitignore  Cargo.toml  README.en.md  README.md  build.rs
articles/: fiŝo.json  reto.md  test.md
docs/: API.md
src/: api.rs  daily_article.rs  index.rs  main.rs  routes.rs  utils.rs  word.rs
static/: main.css
templates/: base.html.tera  base.rs.html  import.html.tera  import.rs.html  index.html.tera  index.rs.html  macros.tera  nav_link.rs.html  search.html.tera  search.rs.html  word.html.tera  word.rs.html
templates/errors/: 404.html.tera  500.html.tera  base.html.tera  base.rs.html  not_found.rs.html  server_error.rs.html
