[package]
name = "nova-reta-vortaro"
version = "0.1.0"
authors = ["Bat' <baptiste@gelez.xyz>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
serde = "*"
serde_json = "*"
serde_derive = "*"
markdown = { git = "https://github.com/johannhof/markdown.rs.git" }
rand = "0.4.2"
time = "0.1.39"

[dependencies.rocket_contrib]
version = "0.3.6"
default-features = false
features = ["tera_templates", "json"]

[dependencies.diesel]
version = "0.99"
default-features = false
features = ["postgres", "uuid", "chrono"]
