[package]
name = "nova-reta-vortaro"
version = "0.1.0"
authors = ["Ana Gelez <ana@gelez.xyz>"]
edition = "2018"

[dependencies]
rocket = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
pulldown-cmark = "0.5"
rand = "0.6"
chrono = "0.4"

[dependencies.diesel]
version = "1.4"
default-features = false
features = ["postgres", "sqlite", "chrono"]

[build-dependencies]
ructe = "0.6"
